--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             background-image: url('assets/background.png');
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
         }
 
         .container {
