--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Pickaxe Protocol</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+        }
         body {
             background-color: #3a2f22;
             color: #fff;
@@ -20,6 +30,7 @@
         }
 
         .container {
+            flex: 1;
             padding: 20px;
         }
 
@@ -64,7 +75,12 @@
         }
 
         .footer {
-            margin-top: 40px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #3a2f22;
+            padding: 10px 0;
             color: #aaa;
             font-size: 12px;
         }
