--- a/index.html
+++ b/index.html
@@ -1,124 +1,111 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pickaxe Protocol</title>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
+<style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
 
-        body {
+    body {
+        display: flex;
+        flex-direction: column;
+        background-color: #3a2f22;
+        color: #fff;
+        font-family: 'Press Start 2P', cursive;
+        text-align: center;
+        background-image: url('assets/background.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .container {
+        flex: 1;
+        padding: 20px;
+    }
+
+    .menu {
+        margin-top: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+
+        .menu a {
             display: flex;
             flex-direction: column;
-        }
-        body {
-            background-color: #3a2f22;
-            color: #fff;
-            font-family: 'Press Start 2P', cursive;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background-image: url('assets/background.png');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .container {
-            flex: 1;
-            padding: 20px;
-        }
-
-        .menu {
-            margin-top: 30px;
-            display: flex;
+            align-items: center;
             justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
+            width: 60px;
+            height: 60px;
+            background-color: rgba(255, 255, 255, 1.0);
+            border-radius: 12px;
+            text-decoration: none;
+            transition: background-color 0.3s;
+            color: #000;
+            font-size: 6px;
+            line-height: 1.2;
+            text-align: center;
         }
 
-            .menu a {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                width: 60px;
-                height: 60px;
-                background-color: rgba(255, 255, 255, 1.0);
-                border-radius: 12px;
-                text-decoration: none;
-                transition: background-color 0.3s;
-                color: #000;
-                font-size: 6px;
-                line-height: 1.2;
-                text-align: center;
+            .menu a:hover {
+                background-color: rgba(255, 255, 255, 0.8);
             }
 
-                .menu a:hover {
-                    background-color: rgba(255, 255, 255, 0.8);
+            .menu a img {
+                width: 30px;
+                height: 30px;
+                object-fit: contain;
+                margin-bottom: 3px;
+            }
+
+            .menu a.telegram {
+                background-color: #fff;
+                color: white;
+            }
+
+                .menu a.telegram img {
+                    width: 45px;
+                    height: 45px;
+                    margin-bottom: 0;
                 }
 
-                .menu a img {
-                    width: 30px;
-                    height: 30px;
-                    object-fit: contain;
-                    margin-bottom: 3px;
-                }
+    .footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: #3a2f22;
+        padding: 10px 0;
+        color: #aaa;
+        font-size: 12px;
+    }
+</style>
 
-        .telegram {
-            background-color: #039BE5 !important;
-        }
+<div class="container">
+    <div class="menu">
+        <a href="#" onclick="alert('Litepaper coming soon!')">
+            <img src="https://cdn-icons-png.flaticon.com/512/281/281760.png" alt="Litepaper">
+            Light Paper
+        </a>
 
-        .footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #3a2f22;
-            padding: 10px 0;
-            color: #aaa;
-            font-size: 12px;
-        }
-        .menu a.telegram {
-            background-color: #039BE5;
-            color: white;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Pickaxe Protocol</h1>
-        <p>The Mining GameFi Revolution</p>
+        <a href="https://play.google.com/store/apps/details?id=com.neocode.pickaxe" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/300/300218.png" alt="Google Play">
+            Play
+        </a>
 
-        <div class="menu">
-            <a href="#" onclick="alert('Litepaper coming soon!')">
-                <img src="https://cdn-icons-png.flaticon.com/512/281/281760.png" alt="Litepaper">
-                Light Paper
-            </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg" alt="Twitter X">
+            X
+        </a>
 
-            <a href="https://play.google.com/store/apps/details?id=com.neocode.pickaxe" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/300/300218.png" alt="Google Play">
-            </a>
-
-            <a href="https://twitter.com" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg" alt="Twitter X">
-            </a>
-
-            <a href="https://t.me" target="_blank" class="menu-item">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"
-                     alt="Telegram"
-                     style="width: 45px; height: 45px;">
-            </a>
-        </div>
-
-        <div class="footer">
-            &copy; 2025 Pickaxe Protocol. All rights reserved.
-        </div>
+        <a href="https://t.me" target="_blank" class="telegram">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+        </a>
     </div>
-</body>
-</html>
+
+    <div class="footer">
+        &copy; 2025 Pickaxe Protocol. All rights reserved.
+    </div>
+</div>
