--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             align-items: center;
             background-color: #3a2f22;
             background-image: url('assets/background.png');
-            background-size: 100% 100%;
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
             background-repeat: no-repeat;
             font-family: 'Press Start 2P', cursive;
             color: #fff;
@@ -78,9 +80,31 @@
             color: #aaa;
             font-size: 12px;
         }
+        .button {
+            background-color: #6a3e1a;
+            color: #f8e3c4;
+            font-size: 32px;
+            font-family: Arial, sans-serif;
+            padding: 20px 50px;
+            border-radius: 15px;
+            box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.3);
+            border: 3px solid #4d2b12;
+            cursor: pointer;
+            user-select: none;
+        }
+
+            .button:hover {
+                background-color: #7a4a23;
+            }
+
+            .button:active {
+                box-shadow: inset 0 4px 0 rgba(0, 0, 0, 0.2);
+                transform: translateY(2px);
+            }
     </style>
 </head>
 <body>
+    <div class="button">Litepaper</div>
     <div class="menu">
         <a href="#" class="litepaper" onclick="alert('Litepaper coming soon!')">
             <img src="https://cdn-icons-png.flaticon.com/512/281/281760.png" alt="LitePaper">
