--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                     color: #000;
                 }
                 .menu a.telegram img {
-                    width: 45px;
-                    height: 45px;
+                    width: 60px;
+                    height: 60px;
                     margin-bottom: 0;
                 }
                 .menu a.twitter img {
-                    width: 60px;
-                    height: 60px;
+                    width: 75px;
+                    height: 75px;
                     margin-bottom: 0;
                 }
 
@@ -138,7 +138,7 @@
 </head>
 <body>
     <div class="button-container">
-        <div class="button">Litepaper</div>
+        <div class="button" onclick="alert('Litepaper coming soon!')">Litepaper</div>
         <a href="https://play.google.com/store/apps/details?id=com.neocode.pickaxe" target="_blank">
             <img alt="Get it on Google Play"
                  src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
