--- a/index.html
+++ b/index.html
@@ -1,59 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pickaxe Protocol</title>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Image Full Width with Button</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: sans-serif;
+      background-color: #452e26;
+      text-align: center;
+    }
+    .button-area {
+        min-height: 100vh;
+  background-image: url('assets/bg1_loop.png');
+  background-repeat: repeat-y;        /* 세로 방향 반복 */
+  background-size: cover;              /* 원본 크기 유지 */
+  background-position: center;
+  padding: 40px 0;
+}
+    .image-box img {
+      width: 100%;       /* 가로 꽉 차게 */
+      height: auto;      /* 비율 유지 */
+      display: block;    /* 이미지 아래 여백 제거 */
+    }
+
+    .button-box {
+      margin: 20px 0 40px; /* 이미지 아래 여백 */
+    }
+
+    .button {
+      background-color: #6a3e1a;
+      color: #f8e3c4;
+      font-size: 26px;
+      font-family: Arial, sans-serif;
+      padding: 20px 40px;
+
+      border-radius: 15px;
+      box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.3);
+      border: 3px solid #4d2b12;
+      cursor: pointer;
+      user-select: none;
+
+      display: inline-block; /* 버튼 내용만큼 크기 */
+    }
+    .play-store {
+      margin-bottom: 20px;
+    }
+
+    .play-store img {
+      width: 200px;
+      height: auto;
+      cursor: pointer;
+    }
+    .footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
             background-color: #3a2f22;
-            background-image: url('assets/background.png');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            margin: 0;
-            background-repeat: no-repeat;
-            font-family: 'Press Start 2P', cursive;
-            color: #fff;
-            text-align: center;
+            padding: 10px 0;
+            color: #aaa;
+            font-size: 12px;
         }
-        .button-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            flex: 1; /* 중앙으로 오게하는 핵심 요소 */
-        }
-
-        .button {
-            background-color: #6a3e1a;
-            color: #f8e3c4;
-            font-size: 32px;
-            font-family: Arial, sans-serif;
-            margin-top: 0;
-            border-radius: 15px;
-            box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.3);
-            border: 3px solid #4d2b12;
-            cursor: pointer;
-            user-select: none;
-        }
-
-        .googleplay-btn {
-            width: 200px;
-            height: auto;
-            cursor: pointer;
-        }
-
         .menu {
             margin-top: auto; /* 메뉴를 아래쪽으로 밀어줌 */
             margin-bottom: 80px; /* footer 위쪽으로부터 적당한 간격 확보 */
@@ -76,22 +90,7 @@
                 color: #000;
                 transition: 0.3s;
             }
-
-                .menu a:hover {
-                    background-color: #ddd;
-                }
-
-                .menu a img {
-                    width: 30px;
-                    height: 30px;
-                    margin-bottom: 4px;
-                }
-                .menu a.litepaper {
-                    font-family: 'Press Start 2P', cursive;
-                    font-size: 6px;
-                    color: #000;
-                }
-                .menu a.telegram img {
+            .menu a.telegram img {
                     width: 60px;
                     height: 60px;
                     margin-bottom: 0;
@@ -101,70 +100,34 @@
                     height: 75px;
                     margin-bottom: 0;
                 }
-
-        .footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #3a2f22;
-            padding: 10px 0;
-            color: #aaa;
-            font-size: 12px;
-        }
-        .button {
-            background-color: #6a3e1a;
-            color: #f8e3c4;
-            font-size: 32px;
-            font-family: Arial, sans-serif;
-            padding: 20px 50px;
-
-            border-radius: 15px;
-            box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.3);
-            border: 3px solid #4d2b12;
-            cursor: pointer;
-            user-select: none;
-        }
-
-            .button:hover {
-                background-color: #7a4a23;
-            }
-
-            .button:active {
-                box-shadow: inset 0 4px 0 rgba(0, 0, 0, 0.2);
-                transform: translateY(2px);
-            }
-    </style>
+  </style>
 </head>
 <body>
-    <div class="button-container">
-        <div class="button" onclick="alert('Litepaper coming soon!')">Lite paper</div>
-        <a href="https://play.google.com/store/apps/details?id=com.neocode.pickaxe" target="_blank">
-            <img alt="Get it on Google Play"
-                 src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
-                 style="width:200px; height:auto; cursor:pointer;" />
-        </a>
-        </div>
-        <div class="menu">
-            <!-- <a href="#" class="litepaper" onclick="alert('Litepaper coming soon!')">
-                 <img src="https://cdn-icons-png.flaticon.com/512/281/281760.png" alt="LitePaper">
-                 Lite Paper
-             </a> -->
-            <!--<a href="https://play.google.com/store/apps/details?id=com.neocode.pickaxe" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/300/300218.png" alt="Google Play">
-            </a>-->
+  <div class="image-box">
+    <img src="assets/background.jpg" alt="Image" />
+  </div>
+  <div class="button-area">
+  <div class="button-box">
+    <div class="button" onclick="alert('Litepaper coming soon!')">Lite paper</div>
+  </div>
+  <div class="play-store">
+    <a href="https://play.google.com/store/apps/details?id=com.neocode.pickaxe" target="_blank">
+      <img alt="Get it on Google Play"
+           src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" />
+    </a>
+  </div>
+  <div class="menu">
+    <a href="https://twitter.com" class="twitter" target="_blank">
+        <img src="assets/twitter.png" alt="Twitter X">
+    </a>
 
-            <a href="https://twitter.com" class="twitter" target="_blank">
-                <img src="assets/twitter.png" alt="Twitter X">
-            </a>
-
-            <a href="https://t.me" target="_blank" class="telegram">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-            </a>
-        </div>
-
-        <div class="footer">
-            &copy; 2025 Pickaxe Protocol. All rights reserved.
-        </div>
+    <a href="https://t.me" target="_blank" class="telegram">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+    </a>
+    </div>
+</div>
+<div class="footer">
+    &copy; 2025 Pickaxe Protocol. All rights reserved.
+</div>
 </body>
 </html>
